# sglab04

./: Cargo.toml  README.md  ben.txt
mainbin/src/: main.rs
sglab06/: Cargo.toml
sglab06/src/: main.rs
sglib06/: Cargo.toml
sglib06/src/: a01.rs  a02.rs  a03.rs  c00.rs  lib.rs  m01.rs  m02.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  q02.rs  sb01.rs  sb02.rs  sb03.rs  sb04.rs  sb05.rs  sba01.rs  sba02.rs  tr01.rs  tr02.rs  tr03.rs  tr04.rs  tr05.rs  tr06.rs  tr07.rs
sglib06/templates/: a01.html  a02.html  a03.html  blueTable.css  hello.html  m01.html  m02.html  menu.html  p02.html  p04.html  p06.html  p08.html  q02.html  sb-menu.html  sb02.html  sba01.html  sba02.html  tr-menu.html  tr05.html
